# curler

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  paths.json
.github/workflows/: rust.yml
src/: main.rs
